# ftphs

./: COPYRIGHT  INSTALL  INSTALL-win.txt  Makefile  MissingH.cabal  README  Setup.hs  ftphs.cabal  ftphs_1.0.6.orig.tar.gz.delta  ftphs_1.0.6.orig.tar.gz.id  ftphs_1.0.7.orig.tar.gz.delta  ftphs_1.0.7.orig.tar.gz.id  wintest.bat
debian/: changelog  control  copyright  rules
examples/: ftpclient.hs  mlsd.hs
src/Network/FTP/: Client.hs  Server.hs
src/Network/FTP/Client/: Parser.hs
src/Network/FTP/Server/: Parser.hs
testsrc/: Tests.hs
testsrc/Network/FTP/: Parsertest.hs
